# mcp-remote-testing

./: .cursorrules  .gitignore  .pre-commit-config.yaml  BROWSER_SETUP_GUIDE.md  CHANGELOG.md  FEATURES.md  GOOGLE_SHEETS_SETUP.md  IMPROVEMENTS.md  Makefile  PR_DESCRIPTION.md  PUBLISHING.md  README.md  ROADMAP.md  TESTING.md  call_mcp_protocol.py  call_mcp_tool.py  export_to_google_sheets.py  mcp.json.example  network_map_hw_lab.mmd  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_google_sheets.sh  test_foundries_vpn.py  test_foundries_vpn_automation.py  test_mcp_foundries_vpn_automation.py  test_mcp_tool.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  lint.yml  publish.yml  tests.yml
docs/: API.md  FACTORY_WIREGUARD_SERVER_CUSTOM_CODE.md  P1_CREDENTIAL_TOOLS_TESTING.md  P1_FOUNDRIES_VPN_DEVICE_TESTING.md  P1_TESTING_RESULTS.md  SECURITY.md  SECURITY_ANALYSIS.md  SETUP.md  SSH_AUTHENTICATION.md  TESTING_PRIORITY.md  UPSTREAM_CODE_VERIFICATION.md  VPN_SETUP.md  architecture.mmd
lab_testing/: __init__.py  config.py  exceptions.py  server.py  test_server.py  version.py
lab_testing/resources/: device_inventory.py  health.py  help.py  network_status.py
lab_testing/server/: tool_definitions.py  tool_handlers.py
lab_testing/tools/: batch_operations.py  batch_operations_async.py  credential_manager.py  device_manager.py  device_verification.py  file_transfer.py  foundries_devices.py  foundries_vpn.py  foundries_vpn_core.py  network_mapper.py  ota_manager.py  power_analysis.py  power_monitor.py  remote_access.py  tasmota_control.py  vpn_manager.py  vpn_setup.py
lab_testing/utils/: __init__.py  change_tracker.py  credentials.py  device_access.py  error_helper.py  foundries_vpn_cache.py  logger.py  process_manager.py  ssh_pool.py
mcp_remote_testing/: __init__.py  config.py  server.py  test_server.py  version.py
mcp_remote_testing/resources/: device_inventory.py  help.py  network_status.py
scripts/: init-repo.sh  mcp-server  setup-repo.sh  update-docs.sh
tests/: README.md  __init__.py  conftest.py  test_server_integration.py  test_tools_batch_async.py  test_tools_device.py  test_tools_network.py  test_tools_ota.py  test_tools_power.py  test_tools_power_analysis.py  test_tools_remote_access.py  test_tools_tasmota.py  test_tools_vpn.py  test_tools_vpn_setup.py  test_utils_credentials.py  test_utils_error_helper.py
(+8 files in other folders)
