[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-testing"
version = "0.1.0"
description = "MCP server for remote embedded hardware testing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Alex J Lennon", email = "ajlennon@dynamicdevices.co.uk"}
]
maintainers = [
    {name = "Alex J Lennon", email = "ajlennon@dynamicdevices.co.uk"}
]
keywords = ["mcp", "model-context-protocol", "embedded", "hardware", "testing", "remote", "iot", "lab", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]
[project.urls]
Homepage = "https://github.com/DynamicDevices/mcp-remote-testing"
Documentation = "https://github.com/DynamicDevices/mcp-remote-testing/blob/main/README.md"
Repository = "https://github.com/DynamicDevices/mcp-remote-testing"
Issues = "https://github.com/DynamicDevices/mcp-remote-testing/issues"
"Changelog" = "https://github.com/DynamicDevices/mcp-remote-testing/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SIM", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [".*", "build", "dist", "lab_testing"]

